--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
+    "@material/web": "^1.3.0",
     "luxon": "^3.4.4",
     "solid-js": "^1.8.11"
   }
