--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "license": "MIT",
   "devDependencies": {
     "@types/luxon": "^3.4.2",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
     "solid-devtools": "^0.29.2",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
-    "@material/web": "^1.3.0",
     "luxon": "^3.4.4",
     "solid-js": "^1.8.11"
   }
