--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
+    "@solidjs/router": "^0.15.3",
     "luxon": "^3.4.4",
     "solid-js": "^1.8.11"
   }
