--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
     "solid-devtools": "^0.29.2",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
     "@solidjs/router": "^0.15.3",
+    "@tailwindcss/vite": "^4.0.0",
+    "@tailwindcss/cli": "^4.0.0",
     "luxon": "^3.4.4",
-    "solid-js": "^1.8.11"
+    "solid-js": "^1.8.11",
+    "tailwindcss": "^4.0.0"
   }
 }
