--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/luxon": "^3.4.2",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
+    "sass": "^1.83.4",
     "solid-devtools": "^0.29.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
